# openxr_samples

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  meson.build
XrHandsFB/app/: CMakeLists.txt  build.gradle
XrHandsFB/app/src/main/cpp/: CMakeLists.txt
XrSpatialAnchor/app/: CMakeLists.txt  build.gradle
XrSpatialAnchor/app/src/main/cpp/: CMakeLists.txt
gl2tri3dOXR/: build.gradle
gl2tri3dOXR/app/: build.gradle
gl2tri3dOXR/app/src/main/: AndroidManifest.xml
gl2tri3dOXR/app/src/main/cpp/: CMakeLists.txt  RenderFunc.h  XrApp.cpp  XrApp.h  android_main.cpp  app_engine.cpp  app_engine.h  render_interface.h  render_scene.cpp  render_scene.h
gl2tri3dOXR/app/src/main/cpp/common/: util_egl.c  util_oxr.cpp  util_oxr.h  util_render_target.cpp  util_render_target.h  util_shader.h
gles3jni/: build.gradle
hello_xr/: CMakeLists.txt  build.gradle  gradle.properties  gradlew  settings.gradle
hello_xr/android_resources/: helloxr-vk-24px.svg.license
hello_xr/android_resources/drawable/: ic_helloxr_es.xml
hello_xr/android_resources/values/: ic_helloxr_launcher_background.xml
hello_xr/android_resources/vulkan/mipmap-anydpi-v26/: ic_helloxr_launcher.xml
hello_xr/app/: CMakeLists.txt  build.gradle  version.gradle
hello_xr/app/src/main/: AndroidManifest.xml
hello_xr/app/src/main/cpp/: CMakeLists.txt  d3d_common.cpp  d3d_common.h  geometry.h  graphicsapi.h  graphicsplugin.h  graphicsplugin_d3d11.cpp  graphicsplugin_opengles.cpp  graphicsplugin_vulkan.cpp  logger.cpp  logger.h  main.cpp  platformdata.h  platformplugin.h  platformplugin_win32.cpp  platformplugin_xlib.cpp
hello_xr/app/src/main/cpp/common/: gfxwrapper_opengl.c
hello_xr/app/src/main/cpp/include/GL/: gl_format.h  glext.h
hello_xr/app/src/main/cpp/include/common/: xr_linear.h
hello_xr/app/src/main/cpp/vulkan_shaders/: frag.glsl  vert.spv  vert.spv.license
hello_xr/app/src/main/res/drawable/: ic_helloxr_vk.xml
hello_xr/app/src/main/res/mipmap-anydpi-v26/: ic_helloxr_launcher.xml
hello_xr/app/src/main/res/values/: ic_helloxr_launcher_background.xml
hello_xr/cpp/: check.h  common.h  graphicsplugin_d3d12.cpp  graphicsplugin_factory.cpp  graphicsplugin_opengl.cpp  main.cpp  meson.build  openxr_program.cpp  openxr_program.h  options.h  pch.cpp  pch.h  platformplugin_android.cpp  platformplugin_factory.cpp
hello_xr/cpp/common/: gfxwrapper_opengl.h
hello_xr/cpp/include/GL/: wglext.h.license
hello_xr/cpp/include/utils/: algebra.h  nanoseconds.h  sysinfo.h  threading.h
hello_xr/cpp/vulkan_shaders/: frag.spv  vert.glsl
hello_xr/gradle/wrapper/: gradle-wrapper.jar.license  gradle-wrapper.properties.license
native-activity/app/: CMakeLists.txt  build.gradle
native_gles3/app/: CMakeLists.txt  build.gradle
native_gles3/app/src/main/: AndroidManifest.xml
native_gles3/app/src/main/cpp/: CMakeLists.txt  EGLState.cpp  EGLState.h  Engine.cpp  Engine.h  EventHandler.cpp  EventHandler.h  OpenXRApp.cpp  OpenXRApp.h  Renderer.cpp  Renderer.h  android_logger.h  android_main.cpp
subprojects/: openxr_loader.wrap  openxr_sdk.wrap
subprojects/packagefiles/openxr_loader/: meson.build
subprojects/packagefiles/openxr_sdk/: meson.build
